# ai-legal-cowork

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  plan.md  spec.md  tasks.md
agents/: Dockerfile  Makefile  README.md  pyproject.toml
agents/app/: main.py
agents/app/agents/: __init__.py  checkpointer.py  drafting_agent.py  orchestrator.py  research_agent.py  retrieval_agent.py  tracing.py
agents/app/auth/: __init__.py  jwt_validator.py
agents/app/docgen/: __init__.py  exporter.py  freeform.py  renderer.py  template_loader.py
agents/app/docgen/templates/: engagement_letter.j2  motion.j2  nda.j2
agents/app/gateway/: __init__.py  client.py  sanitizer.py
agents/app/mcp_client/: __init__.py  client.py
agents/app/pii/: __init__.py  audit.py  legal_recognizers.py  redactor.py
agents/app/rag/: api_client.py  chunker.py  embedder.py  hasher.py  ingestion.py  models.py  parser.py  pinecone_store.py
agents/app/research/: __init__.py  legal_db.py  web_search.py
agents/app/retrieval/: __init__.py  citations.py  reranker.py  retriever.py
agents/app/routes/: chat.py  ingest.py
agents/tests/: test_health.py
agents/tests/ingestion/: conftest.py  test_api_client.py  test_chunker.py  test_embedder.py  test_hasher.py  test_ingest_endpoint.py  test_ingestion_integration.py  test_parser.py  test_pinecone_store.py
agents/tests/phase4/: __init__.py  conftest.py  test_chat_endpoint.py  test_chat_integration.py  test_checkpointer.py  test_citations.py  test_gateway.py  test_langsmith.py  test_mcp_client.py  test_orchestrator.py  test_pii.py  test_reranker.py  test_retrieval_agent.py  test_retriever.py
agents/tests/phase6/: __init__.py  conftest.py  test_cross_matter_access.py  test_e2e_chat_flow.py  test_jwt_secret_config.py  test_pii_chat_flow.py
agents/tests/phase7/: __init__.py  conftest.py  test_drafting_agent.py  test_exporter.py  test_freeform.py  test_legal_db.py  test_renderer.py  test_research_agent.py  test_template_loader.py  test_web_search.py
agents/tests/phase9/: __init__.py  conftest.py  test_airflow_dag.py  test_encryption_config.py  test_legal_recognizers.py  test_performance_chat.py  test_performance_retrieval.py  test_prompt_injection.py  test_security_cross_matter.py  test_tls_config.py
api/: .env.example  .eslintrc.json  Dockerfile  Makefile  README.md  openapi.yaml  package.json  tsconfig.json  tsconfig.test.json
api/prisma/: schema.prisma
api/src/: server.ts
api/src/mcp/: server.ts
api/src/middleware/: authenticate.ts  matterAccess.ts  rbac.ts
api/src/routes/: auth.ts  clients.ts  conversations.ts  documents.ts  matters.ts
api/src/schemas/: auth.ts  conversations.ts  documents.ts  matters.ts
api/src/services/: audit.ts
api/src/types/: fastify.d.ts
api/tests/: assignments.test.ts  audit-completeness.test.ts  audit-e2e.test.ts  audit.test.ts  auth.test.ts  clients.test.ts  conversations.test.ts  documents.test.ts  error-handling.test.ts  health.test.ts  matters.test.ts  mcp-tools.test.ts  privilege-escalation.test.ts  sso.test.ts
desktop/: eslint.config.js  fetch_diag.test.tsx  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.js  App.test.js  App.test.tsx  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: multi-phase-permission-bypass-prompt.md
docs/phases/: phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md  phase_9.md
infra/: .env.example  docker-compose.yml
infra/encryption/: README.md
infra/postgres/: postgresql.conf
infra/scripts/: seed.py  verify_encryption.sh  verify_tls.py
shared/constants/: roles.ts
shared/schemas/: citation.json
(+73 files in other folders)
